Fixes bug where Latest Issues Block would display Current Issue block instead

--- a/templates/block/block--ucb-latest-issues-block.html.twig
+++ b/templates/block/block--ucb-latest-issues-block.html.twig
@@ -41,9 +41,9 @@
 		</div>
 	{% endif %}
 	{{ title_suffix }}
-	<current-issue-block>
+	<latest-issue-block>
 		<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
 			<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
 		</div>
-	</current-issue-block>
+	</latest-issue-block>
 </div>
