--- a/templates/block/block--ucb-latest-issues-block.html.twig
+++ b/templates/block/block--ucb-latest-issues-block.html.twig
@@ -11,6 +11,8 @@
 ]
 %}
 
+{% set baseurlJSON = (url('<front>')|render|trim('/'))%}
+
 {# Block/Title/Icon Styles #}
 {% set blockStyles = [
 	content.field_bs_background_style|render|striptags|trim,
@@ -41,7 +43,7 @@
 		</div>
 	{% endif %}
 	{{ title_suffix }}
-	<latest-issue-block>
+	<latest-issue-block baseURL="{{baseurlJSON}}" siteName="{{ site_name|lower|replace({' ': '-', '_': '-'}) }}">
 		<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
 			<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
 		</div>
