--- a/templates/paragraphs/paragraph--ucb-issue-section.html.twig
+++ b/templates/paragraphs/paragraph--ucb-issue-section.html.twig
@@ -19,7 +19,7 @@
         <div class="issue-section-content">
             {% if item.entity.field_ucb_article_thumbnail.entity.field_media_image %}
                 <div class="teaser-article-thumbnail" id='teaser-article-thumbnail-{{key}}'> 
-                    <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                    <a href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                         <img src="{{ base_url }}{{ file_url(item.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri | image_style('focal_image_square')) }}" 
                         alt="{{ item.entity.field_ucb_article_thumbnail.entity.field_media_image.alt }}"
                         >
@@ -27,39 +27,39 @@
                 </div>
             {% endif %}
             <div class="issue-section-content-summary">
-                <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                     <h3 class="issue-section-teaser-title">{{item.entity.title.value}}</h3>
                 </a>
                 <div class="issue-article-categories">{{item.entity.field_ucb_article_categories|view}}</div>
                 <p class="issue-section-teaser-summary">{{item.entity.field_ucb_article_summary.value}}</p>
-                <a class="issue-section-teaser-read" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">Read More</a>
+                <a class="issue-section-teaser-read" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">Read More</a>
             </div>
         </div>
                         
     {# If feature #}
         {% elseif paragraph.field_ucb_issue_section_style.value is same as ("1") %}
             <div class="issue-section-content-feature">
-                <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                <a href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                     <div class="feature-article-thumbnail" id='feature-article-thumbnail-{{key}}'> {{ item.entity.field_ucb_article_thumbnail|view }} </div>
                 </a>
                 <div class="issue-section-content-summary">
-                    <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                    <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                         <h3 class="issue-section-feature-title">{{item.entity.title.value}}</h3>
                     </a>
                     <div class="issue-article-categories">{{item.entity.field_ucb_article_categories|view}}</div>
                     <p class="issue-section-feature-summary">{{item.entity.field_ucb_article_summary.value}}</p>
-                    <a class="issue-section-feature-read" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">Read More</a>
+                    <a class="issue-section-feature-read" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">Read More</a>
                 </div>
             </div>
 
     {# title & thumbnail #}
         {% elseif paragraph.field_ucb_issue_section_style.value is same as ("2") %}
         <div class="issue-section-content">
-            <a href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+            <a href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                 <div class="title-thumb-article-thumbnail" id='title-thumb-article-thumbnail-{{key}}'> {{ item.entity.field_ucb_article_thumbnail|view }} </div>
             </a>
             <div class="issue-section-content-summary">
-                <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+                <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                     {{item.entity.title.value}}
                 </a>
             </div>
@@ -68,7 +68,7 @@
     {# title only #}
         {% else %}
         <div class="issue-section-title-only">
-            <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': content.field_ucb_issue_article_select['#items'].entity.id}) }}">
+            <a class="issue-article-title-link" href="{{ path('entity.node.canonical', {'node': item.entity.id}) }}">
                 {{item.entity.title.value}}
             </a>
         </div>
