--- a/css/ucb-issue.css
+++ b/css/ucb-issue.css
@@ -65,8 +65,7 @@ img {
 }
 
 .feature-article-thumbnail>div>div>div>img {
-  max-width: 700px;
-  max-height: 275px;
+  aspect-ratio: 2 / 1;
   object-fit: cover;
   margin-bottom: 10px;
 }
